[gd_scene load_steps=17 format=3 uid="uid://bh2mklahppagg"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_6gqqj"]
[ext_resource type="AudioStream" uid="uid://drwaene8pl3e5" path="res://assets/sfx/grass_footstep_002.mp3" id="3_ocs2m"]
[ext_resource type="AudioStream" uid="uid://dpm85774xd17" path="res://assets/sfx/grass_footstep_004.mp3" id="5_u8r3i"]
[ext_resource type="AudioStream" uid="uid://0k7ucb04bntc" path="res://assets/sfx/grass_footstep_005.mp3" id="5_xfhga"]
[ext_resource type="AudioStream" uid="uid://cyxk6ddmjqovn" path="res://assets/sfx/duck_pickup.mp3" id="6_6ly70"]
[ext_resource type="AudioStream" uid="uid://b0fayr4cpylxl" path="res://assets/sfx/grass_footstep_006.mp3" id="6_7ao4b"]
[ext_resource type="AudioStream" uid="uid://ca5wvk05q1ynd" path="res://assets/sfx/wood_footstep_001.mp3" id="6_wcxi8"]
[ext_resource type="AudioStream" uid="uid://dh8it11a0kuve" path="res://assets/sfx/duck_put_down_001.mp3" id="7_aoft2"]
[ext_resource type="AudioStream" uid="uid://8tkbjvr1fwg1" path="res://assets/sfx/wood_footstep_002.mp3" id="7_qfe2p"]
[ext_resource type="AudioStream" uid="uid://bvrd6c7eong5b" path="res://assets/sfx/wood_footstep_003.mp3" id="8_2bimn"]
[ext_resource type="AudioStream" uid="uid://cvl1d0qcrs4n0" path="res://assets/sfx/duck_put_down_002.mp3" id="8_csoae"]
[ext_resource type="AudioStream" uid="uid://cxqb4fdvsnvfq" path="res://assets/sfx/wood_footstep_004.mp3" id="9_gcorg"]
[ext_resource type="AudioStream" uid="uid://c38etbjegegbq" path="res://assets/sfx/duck_put_down_003.mp3" id="9_vrigt"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5ik6d"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_vgqvu"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_vu8o8"]
random_pitch = 1.2
streams_count = 3
stream_0/stream = ExtResource("7_aoft2")
stream_1/stream = ExtResource("8_csoae")
stream_2/stream = ExtResource("9_vrigt")

[node name="Player" type="CharacterBody3D"]
collision_mask = 5
script = ExtResource("1_6gqqj")
move_speed = 4.0
headbob_frequency = 2.5
grass_sounds = Array[AudioStream]([ExtResource("3_ocs2m"), ExtResource("5_u8r3i"), ExtResource("5_xfhga"), ExtResource("6_7ao4b")])
wood_sounds = Array[AudioStream]([ExtResource("6_wcxi8"), ExtResource("7_qfe2p"), ExtResource("8_2bimn"), ExtResource("9_gcorg")])

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_5ik6d")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -0.5)

[node name="Camera3D" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -0.5)

[node name="RayCast3D" type="RayCast3D" parent="Head/Camera3D"]
target_position = Vector3(0, 0, -2.2)
collision_mask = 2

[node name="DuckHoldPoint" type="Node3D" parent="Head/Camera3D"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -0.5, -1)

[node name="DuckPickupAudio" type="AudioStreamPlayer3D" parent="Head/Camera3D/DuckHoldPoint"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -6.45031e-10, -0.00126046, 0.00737834)
stream = ExtResource("6_6ly70")

[node name="ObjectHoldPoint" type="Node3D" parent="Head/Camera3D"]
transform = Transform3D(-0.0301537, 0.17101, 0.984808, 0.984808, 0.173648, 0, -0.17101, 0.969846, -0.173648, 0.345, -0.25, -0.598)

[node name="BodyMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_vgqvu")

[node name="FootStepAudio" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.988692, -2.0299)

[node name="DuckPutDownAudio" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_vu8o8")

[node name="FloorRay" type="RayCast3D" parent="."]
target_position = Vector3(0, -1.01, 0)
collision_mask = 4
